For the Upcoming pre-release: - Added a new physical/mental health formula making it possible to use tokens "health"-bars - Added a (optional) limited sheet that is shown instead of the character stats if the player does not "own" the character sheet. Can be turned off by GM via system settings. - Added the option to have a morph picture for every morph - Fixed the Threat's & NPC's additional skills to work similar to PC's - General UI overhaul for NPCs and Threats in order to look/work more like actor sheets - Added an simple armor calculator which adds ups all the armor and provides additional info. - Added "Encumberance" through armor to the roll mods - Aligned the UX of most items to prevent players from accidentially delete them. - Brought the release for 0.8.x to version 0.4.9.4 - Added Icons in the compendium for all morph- and ego traits - Fixed an interface bug which rendered the search within compendiums unreadable 0.8.x - CSS fixes - Added encumberance through items & weapons to the homebrew-section - Switched all dice rolls to async=true in respect to the upcoming dice roll change in 0.9.x
ToDoList:
- Adding a system for drugs
- Adding automatic bonus/malus gains through gear/traits/wear.
- Adding ammunition Count & Reload system
- Adding special ammunition

--- a/css/eclipsephase.css
+++ b/css/eclipsephase.css
@@ -274,6 +274,11 @@
 
 /* Colors */
 
+a.entity-link {
+  background: var(--pitchBorder);
+  border: none;
+}
+
 .atHand {
   outline: var(--highlight) 2px inset;
   background: var(--pitchBackground);
